# Mulesoft-AI-Valut

./: LICENSE  README.md
AI-Data-Analyst-2/: Instructions.md  README.md
AI-Data-Analyst-2/Python/: amazon.db  frontend.py  main.py  sql_logger.py  sql_query_log.jsonl
AI-Data-Analyst-2/Resources/: AI Data Analyst.pptx
AI-Data-Analyst/Python/: frontend.py  main.py  pyproject.toml
Sales Forecasting Dashboard/Python/: README.md  backend.py  backuptoml.txt  frontend.py  pyproject.toml  sales-forecast-prediction_BackUp.py
Sales Forecasting Dashboard/Resources/: Instructions.md  Sales Forecasting Dashboard.pptx
jira-ai-bug-agent/: .gitignore  Instructions.md  README.md
jira-ai-bug-agent/Python/: .env  Jira_Issue.json  frontend.py  pyproject.toml
jira-ai-bug-agent/Resources/: Jira AI Bug Agent.pptx
jira-ai-bug-agent/jira-ai-bug-agent/: README.md  pom.xml
jira-ai-bug-agent/jira-ai-bug-agent/reports/: global-error-handler-report.html  jira-ai-bug-agent-report.html  summary.html
jira-ai-bug-agent/jira-ai-bug-agent/src/main/mule/: global-error-handler.xml  global.xml  jira-agent-eapi.xml
jira-ai-bug-agent/jira-ai-bug-agent/src/main/mule/implementations/: health-check.xml  update-ai-summary-and-sentiment-in-jira.xml
jira-ai-bug-agent/jira-ai-bug-agent/src/main/mule/subflows/: jira-subflow.xml
jira-ai-bug-agent/jira-ai-bug-agent/src/main/resources/: log4j2.xml
jira-ai-bug-agent/jira-ai-bug-agent/src/test/resources/: Jira AI Bug Agent.postman_collection
mss-jira-bug-ai-agent/: pom.xml
mss-jira-bug-ai-agent/src/main/resources/: log4j2.xml
