[project]
name = "python-project"
version = "0.1.0"
description = "Sales Prediction and Analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.19.0,<1.32.0",
    "altair>=4.2.0,<5.0.0",
    "pandas>=2.2.0,<3.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "seaborn>=0.13.0,<0.14.0",
    "scikit-learn>=1.4.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",
]
